Fix Zoom Bar not showing for Product gallery

--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -145,7 +145,7 @@ body {
 .navigation-bar {
   display: block;
   position: fixed;
-  z-index: 10000;
+  z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
